# BRIDGE-social_network

./: .gitignore  LICENSE  README.md
Client/: CMakeLists.txt  CMakeLists.txt.user.780e55a  NetworkManager.cpp  NetworkManager.h  PostData.h  PostManager.cpp  PostManager.h  ProfileLoader.cpp  ProfileLoader.h  main.cpp  resources.qrc
Client/qml/Components/: AddPostButton.qml  AppHeader.qml  Avatar.qml  CloseButton.qml  ConfirmDeleteDialog.qml  CustomButton.qml  CustomTextField.qml  EditPostDialog.qml  FloatingLogo.qml  ImagePreview.qml  LoginForm.qml  MainBackground.qml  ParticlesRepeater.qml  Post.qml  PostHeader.qml  PostList.qml  PrimaryButton.qml  RegisterForm.qml  TextLink.qml  WindowButton.qml  WindowControls.qml
Client/qml/Pages/: LoginPage.qml  Main.qml  PostPage.qml  ProfilePage.qml  ProfileWindow.qml  RegisterPage.qml
FriendService/: Dockerfile  docker-compose.yml  main.cpp
FriendService/configs/: static_config.yaml
FriendService/schemas/: UserFriendshipRequest.yaml
FriendService/sql/: create_table.sql  get_received_friend_requests.sql  get_sent_friend_request.sql  update_friend_request_status.sql
FriendService/src/Controllers/: FriendshipController.cpp
FriendService/src/Managers/: FriendshipManager.cpp
FriendService/src/Repositories/: FriendshipRepository.cpp
POSTING_SYSTEM_BRIGDE/: CMakeLists.txt  docker-compose.yml  main.cpp
POSTING_SYSTEM_BRIGDE 2/: docker-compose.yml  dockerfile  main.cpp
POSTING_SYSTEM_BRIGDE 2/configs/: static_config.yaml
POSTING_SYSTEM_BRIGDE 2/include/Controllers/: PostController.hpp
POSTING_SYSTEM_BRIGDE 2/include/Managers/: PostManager.hpp
POSTING_SYSTEM_BRIGDE 2/include/Repositories/: PostRepository.hpp
POSTING_SYSTEM_BRIGDE 2/schemas/: PostRequests.yaml
POSTING_SYSTEM_BRIGDE 2/sql/: create_post.sql  delete_post.sql  edit_post.sql  find_post_by_id.sql
POSTING_SYSTEM_BRIGDE 2/sql/init-scripts/: 01_create_post_table.sql  02_create_likes_table.sql
POSTING_SYSTEM_BRIGDE/schemas/: Post.yaml
PostService/: main.cpp  secdist.json
PostService/sql/: check_owner.sql  create_post.sql  update_post.sql
PostService/src/Controllers/: PostController.cpp
Server/: base.Dockerfile  docker-compose.yml
Server/AuthService/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
Server/ChatService/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
Server/ChatService/configs/: static_config.yaml
Server/ChatService/include/Handlers/Http/: AddParticipantHandler.hpp  CreateConversation.hpp  DeleteMessageHandler.hpp  GetConversationDetailsHandler.hpp  GetMessagesHandler.hpp  LeaveConversationHandler.hpp  ListConversationsHandler.hpp  MarkAsReadHandler.hpp  RemoveParticipantHandler.hpp  SendMessageHandler.hpp  UpdateConversationHandler.hpp  UpdateMessageHandler.hpp
Server/ChatService/schemas/: ChatCommonTypes.yaml  ConversationDTO.yaml  MessageDTO.yaml  ParticipantDTO.yaml  ReadStatusDTO.yaml
Server/ChatService/sql/init-scripts/: 04_create_message_read_status.sql
Server/ChatService/src/Handlers/Http/: AddParticipantHandler.cpp  CreateConversation.cpp  DeleteMessageHandler.cpp  GetConversationDetailsHandler.cpp  GetMessagesHandler.cpp  LeaveConversationHandler.cpp  ListConversationsHandler.cpp  MarkAsReadHandler.cpp  RemoveParticipantHandler.cpp  SendMessageHandler.cpp  UpdateConversationHandler.cpp  UpdateMessageHandler.cpp
Server/Common/JwtMiddleware/: CMakeLists.txt
Server/Common/JwtMiddleware/include/: JwtMiddleware.hpp
Server/Common/JwtMiddleware/src/: JwtMiddleware.cpp
Server/FriendshipService/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
Server/PostService/: CMakeLists.txt  Dockerfile
Server/ProfileService/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
Server/ProfileService/configs/: static_config.yaml
Server/ProfileService/include/Controllers/: ProfileController.hpp
Server/ProfileService/include/Managers/: ProfileManager.hpp  S3Manager.hpp
Server/ProfileService/include/Repositories/: ProfileRepository.hpp
Server/ProfileService/schemas/: Profile.yaml
Server/ProfileService/sql/: find_profile_by_id.sql  update_user_avatar.sql  update_user_profile.sql
Server/ProfileService/sql/init-scripts/: 01_create_table_user_profile.sql
Server/ProfileService/src/Controllers/: ProfileController.cpp
Server/ProfileService/src/Managers/: ProfileManager.cpp  S3Manager.cpp
Server/ProfileService/src/Repositories/: ProfileRepository.cpp
Server/init-scripts/: 01_create_table_users.sql  02_create_table_tokens.sql  04_create_table_user_profile.sql
posting system bridge/: main.cpp
posting system bridge/schemas/: PostRequests.yaml
posting system bridge/sql/: create_post.sql  dislike_post.sql  edit_post.sql  find_post_by_id.sql
posting_system_bridge/: CMakeLists.txt  docker-compose.yml  dockerfile  main.cpp
posting_system_bridge/.cache/clangd/index/: PostController.cpp.13E8310927B5C44F.idx  PostController.hpp.0BD7DE706DD3452D.idx  PostController.hpp.70C0B0AA68227CA0.idx  PostManager.cpp.08751BE929035E7E.idx  PostManager.hpp.6F2A0157E003E15B.idx  PostManager.hpp.D09DA97319FD5F38.idx  PostRepository.cpp.E18551970B4F4790.idx  PostRepository.hpp.23DF5A913DAA1CE2.idx  PostRequests_fwd.hpp.19C59160302329B0.idx
posting_system_bridge/configs/: config_vars.yaml  static_config.yaml
posting_system_bridge/include/Controllers/: CmmentController.hpp  PostController.hpp
posting_system_bridge/include/Managers/: CommentManager.hpp
posting_system_bridge/include/Repositories/: CommentRepository.hpp  PostRepository.hpp
posting_system_bridge/schemas/: CommentRequests.yaml
posting_system_bridge/sql/: create_comment.sql  delete_post.sql  like_post.sql  remove_reaction.sql
posting_system_bridge/sql/init-scripts/: 03_create_post_comments_table.sql
posting_system_bridge/src/Controllers/: CommentController.cpp
posting_system_bridge/src/Managers/: CommentManager.cpp  PostManager.cpp
posting_system_bridge/src/Repositories/: CommentRepository.cpp  PostRepository.cpp
postman-tests/: newman-report.html  newman-report.json  tests.json
(+105 files in other folders)
